Made changes to the following files:

--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -9,7 +9,7 @@ $topButtonHover: #000;
 
 // text colors light theme
 $titleColor: #000000;
-$textColor: #ffffff;
+$textColor: #000000;
 $subTitle: #868e96;
 $cardSubtitle: #666666;
 $talkCardSubTitle: #7f8287;
